--- a/api-server/package.json
+++ b/api-server/package.json
@@ -2,10 +2,10 @@
   "name": "api-server",
   "version": "1.0.0",
   "description": "API server handling incoming requests from the frontend",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   },
   "author": "Arjun Varma",
   "license": "ISC",
