--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -11,20 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18' # Adjust to your Node.js version
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
+    # Navigate to the directory containing package.json
+    - name: Navigate to script directory
+      run: cd cron-job
 
-      # Step 4: Run the cron job script
-      - name: Run Keep Alive Script
-        run: node cron-job/index.js
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run Keep Alive Script
+      run: node index.js
