--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -2,8 +2,7 @@ name: Keep Services Alive
 
 on:
   schedule:
-    # Runs every 1 minute
-    - cron: '* * * * *'
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
